--- a/frontend/src/lib/router/PollResult/pollResult.component.html
+++ b/frontend/src/lib/router/PollResult/pollResult.component.html
@@ -77,7 +77,10 @@
 </div>
 
 <div class="returnToMainButton">
-  <button mat-flat-button  color="primary" routerLink="/main"><mat-icon>arrow_back_ios</mat-icon>RETURN TO MAIN</button>
+  <button mat-flat-button color="primary" routerLink="/main">
+    <mat-icon>arrow_back_ios</mat-icon>
+    RETURN TO MAIN
+  </button>
 </div>
 
 
