--- a/frontend/src/lib/router/editor/editor.component.scss
+++ b/frontend/src/lib/router/editor/editor.component.scss
@@ -52,7 +52,7 @@
 .nextButton {
   text-align: center;
   position: absolute;
-  right: 5%;
+  right: 2%;
   width: auto;
   //width: 7%;
   //height: 7%;
@@ -62,7 +62,7 @@
 .returnToMainButton{
   text-align: center;
   position: absolute;
-  right: 5%;
+  right: 2%;
   width: auto;
   //width: 7%;
   //height: 7%;
@@ -149,10 +149,11 @@
   text-align: center;
   position: fixed;
   right: 40%;
+  left: 30%;
   background-color: rgba(239, 238, 238, 1);
-  width: 20%;
-  height: 20%;
-  top: 40%;
+  width: 40%;
+  height: 40%;
+  top: 30%;
   color: black;
   border: 3px solid #ff8200;
   border-radius: 15px 15px 15px 15px;
@@ -165,10 +166,11 @@
   font-weight: bolder;
   position: fixed;
   right: 40%;
+  left: 30%;
   background-color: rgb(255, 255, 255);
-  width: 20%;
-  top: 40%;
-  height: 20%;
+  width: 40%;
+  top: 30%;
+  height: 40%;
   color: black;
   border-right: 1px solid #2c2c2c;
   border-left: 1px solid #2c2c2c;
@@ -191,7 +193,7 @@
   cursor: pointer;
 }
 .headline{
-  height: 35px;
+  height: 15%;
   background:  #ff8200;
   border-radius: 7px 7px 0px 0px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -203,4 +205,11 @@
 
 .headline .headline_txt{
   text-align: center;
+}
+#successicon {
+  position: fixed;
+  font-size: 100px;
+  top:50%;
+  left: 50%;
+  color: springgreen;
 }
