--- a/frontend/src/lib/router/login/login.component.html
+++ b/frontend/src/lib/router/login/login.component.html
@@ -42,7 +42,7 @@
         </div>
 
 
-        <input type="submit" value="Login"  (click)="submitlogin($event)">
+        <button type="submit" value="Login"  (click)="submitlogin($event)"> </button>
         <div class="loading" *ngIf="showloadingstatus">
           <mat-spinner [diameter]="40"></mat-spinner>
         </div>
