--- a/frontend/src/lib/router/editor/editor.component.html
+++ b/frontend/src/lib/router/editor/editor.component.html
@@ -7,7 +7,7 @@
 <body>
 
 
-<div class="sidebar" *ngIf="!triesToSubmit && !notAllFilled">
+<div class="sidebar" *ngIf="!triesToSubmit && !notAllFilled && !back">
 
   <section id="head">
     <h1>Create new Poll:</h1>
@@ -50,7 +50,7 @@
   </section>
 
 
-  <div *ngIf="!this.next && !this.triesToSubmit && !notAllFilled" class="questionwindow">
+  <div *ngIf="!this.next && !this.triesToSubmit && !notAllFilled && !back" class="questionwindow">
 
     <ul class="questioneditor">
       <li *ngFor="let question of poll.questions">
@@ -62,7 +62,7 @@
 
 </div>
 <section id="emaillist">
-  <div *ngIf="this.next && !this.triesToSubmit && !notAllFilled" class="questionwindow">
+  <div *ngIf="this.next && !this.triesToSubmit && !notAllFilled && !back" class="questionwindow">
     <ul>
       <label class="label" for="emailInput">Enter an Email:</label>
       <mat-form-field [ngStyle]="{'width.ch': inputText.value.length, 'min-width.ch': 20, 'max-width.ch': 30}">
@@ -82,26 +82,32 @@
   </div>
 </section>
 
-<div *ngIf="this.next && !this.triesToSubmit && !notAllFilled" class="nextButton">
+<div *ngIf="this.next && !this.triesToSubmit && !notAllFilled && !back" class="nextButton">
   <button mat-flat-button color="primary" (click)="pressSubmitButton()">
     <mat-icon>arrow_forward_ios</mat-icon>
     &nbsp;&nbsp;&nbsp;&nbsp;SUBMIT&nbsp;&nbsp;&nbsp;&nbsp;
   </button>
 </div>
-<div *ngIf="!this.next && !this.triesToSubmit && !notAllFilled" class="nextButton">
+<div *ngIf="this.next && !this.triesToSubmit && !notAllFilled && !back" class="emailButton">
+  <button mat-flat-button color="primary" (click)="retrieveEmails()">
+    <mat-icon>arrow_forward_ios</mat-icon>
+    &nbsp;&nbsp;&nbsp;&nbsp;RETRIEVE EMAILS&nbsp;&nbsp;&nbsp;&nbsp;
+  </button>
+</div>
+<div *ngIf="!this.next && !this.triesToSubmit && !notAllFilled && !back" class="nextButton">
   <button mat-flat-button color="primary" (click)="this.next = true;">
     <mat-icon>arrow_forward_ios</mat-icon>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NEXT&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   </button>
 </div>
-<div *ngIf="this.next && !this.triesToSubmit && !notAllFilled" class="returnToMainButton">
+<div *ngIf="this.next && !this.triesToSubmit && !notAllFilled && !back" class="returnToMainButton">
   <button mat-flat-button color="primary" (click)="this.next = false;">
     <mat-icon>arrow_back_ios</mat-icon>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;BACK&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   </button>
 </div>
 
-<div *ngIf="!this.next && !this.triesToSubmit && !notAllFilled" class="returnToMainButton">
+<div *ngIf="!this.next && !this.triesToSubmit && !notAllFilled && !back" class="returnToMainButton">
   <button mat-flat-button color="primary" (click)="this.back = true">
     <mat-icon>arrow_back_ios</mat-icon>
     RETURN TO MAIN
@@ -148,7 +154,7 @@
   </div>
   <br/>
   <div mat-dialog-content><br/>This is the private key to this poll:<br/><br/>
-    {{this.privateKey}}<br/><br/>
+    <span style="font-size: larger; font-weight: bolder">{{this.privateKey}}</span><br/><br/>
     Please write it down or copy to a txt-file. Store it somewhere safe.<br/> You won't be able to access the results without it!<br/><br/>
   </div>
   <div class="change_btn"mat-dialog-actions>
