--- a/frontend/src/lib/router/editor/editor.component.scss
+++ b/frontend/src/lib/router/editor/editor.component.scss
@@ -59,13 +59,21 @@
   bottom: 5%;
   align-items:flex-end;
 }
+.emailButton {
+  text-align: center;
+  position: absolute;
+  right: 2%;
+  width: auto;
+  bottom: 25%;
+  align-items:flex-end;
+}
+
+
 .returnToMainButton{
   text-align: center;
   position: absolute;
   right: 2%;
   width: auto;
-  //width: 7%;
-  //height: 7%;
   bottom: 15%;
   cursor: pointer;
   align-items: flex-end;
@@ -112,13 +120,11 @@
   list-style: none;
   align-items: flex-start;
   width: 30vw;
-  //max-height: 30px;
 }
+
 .emailstyle{
   font-size: 20px;
   overflow: scroll;
-  //border: 3px solid #ea7609;
-  //border-radius: 40px 40px 40px 40px;
 }
 
 .inputfield{
@@ -164,6 +170,8 @@
 .sureBackToMain{
   text-align: center;
   font-weight: bolder;
+  z-index: 1;
+  transition: opacity 0.3s ease;
   position: fixed;
   right: 40%;
   left: 30%;
@@ -212,4 +220,5 @@
   top:50%;
   left: 50%;
   color: springgreen;
+  z-index: 1.1;
 }
