--- a/frontend/src/lib/router/survey/survey.component.html
+++ b/frontend/src/lib/router/survey/survey.component.html
@@ -2,7 +2,7 @@
 
 <div *ngIf="this.errorMessage == undefined && !this.submited && this.loaded">
 <div id="head">
-  <h1>{{this.poll.name}}</h1>
+  {{this.poll.name}}
 </div>
 
 <div id="body">
