--- a/frontend/src/lib/survey-question/survey-question.component.css
+++ b/frontend/src/lib/survey-question/survey-question.component.css
@@ -8,17 +8,18 @@
 }
 
 #head h2{
-  font-size: medium;
-
-
+  padding-top: 2.5vh;
+  font-size: 1.7em;
 }
 #body {
-  font-size: small;
-  margin-bottom: 5vh;
+  font-size: 1.4em;
+  padding-bottom: 2.3vh;
+
 }
 
 #body ul{
   list-style-type: none;
+  margin-bottom: 3vh;
 }
 
 .yesNoAnswer{
@@ -26,7 +27,7 @@
 }
 
 .description h3{
-  font-size: small;
+  font-size: 1.1em;
   margin-bottom: 1%;
 }
 
@@ -35,15 +36,21 @@
   padding-left: 5px;
   padding-right: 5px;
   border: 1px solid grey;
-  font-size: smaller;
+  font-size: 1em;
+  border-radius: 5px 5px 5px 5px;
   margin-bottom: 2%;
 
 }
 
 
 .customAnswer{
-  margin-top: 0;
-  width: 30vw;
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.customAnswer #cA {
+    width: 100%;
 }
 
 
