--- a/frontend/src/lib/router/mainmenu/mainmenu.component.html
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.html
@@ -73,6 +73,7 @@
     >
     <span></span>
     <label>Email</label>
+    <div class="invalidemail" *ngIf="invalidemailfornewUser"> Your input is  not a valid email.</div>
   </div>
 
   <div class="txt_field">
